--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html class="nojs html css_verticalspacer" lang="es-ES">
  <head>
 
@@ -294,7 +294,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <div id="u1915-9">
        <p id="u1915-2">Expositores</p>
        <p>&nbsp;</p>
-       <p id="u1915-6"><a class="nonblock" href="href://#">Expositores, facilitadores e invitados del panel proporcionarán ideas inspiradvoras y estimulantes consejos prácticos.</a></p>
+       <p id="u1915-6"><a class="nonblock" href="#">Expositores, facilitadores e invitados del panel proporcionarán ideas inspiradvoras y estimulantes consejos prácticos.</a></p>
        <p>&nbsp;</p>
        <p>&nbsp;</p>
       </div>
@@ -386,9 +386,9 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
      <ul class="AccordionWidget clearfix grpelem" id="accordionu2134"><!-- vertical box -->
       <li class="AccordionPanel borderbox clearfix colelem" id="u2135"><!-- vertical box --><div class="AccordionPanelTab borderbox clearfix colelem" id="u2138-4"><!-- content --><div id="u2138-3"><p>DESCARGAS</p></div></div><div class="AccordionPanelContent disn borderbox clearfix colelem" id="u2136"><!-- group --><div class="clearfix grpelem" id="u2137-8"><!-- content --><p>Aquí encontraras toda la información relativa a la</p><p>III Convención Nacional de Protección Civil</p><p>No te pierdas ninguna de las ponencias y talleres que hemos diseñado pensando en ti</p></div></div></li>
-      <li class="AccordionPanel borderbox clearfix colelem" id="u2143"><!-- vertical box --><div class="AccordionPanelTab borderbox clearfix colelem" id="u2144-4"><!-- content --><div id="u2144-3"><p>Agenda Rápida</p></div></div><div class="AccordionPanelContent disn borderbox clearfix colelem" id="u2145"><!-- group --><a class="nonblock nontext museBGSize clearfix grpelem" id="u2146-3" href="href://#" target="_blank"><!-- content --><p>&nbsp;</p></a></div></li>
-      <li class="AccordionPanel borderbox clearfix colelem" id="u2139"><!-- vertical box --><div class="AccordionPanelTab borderbox clearfix colelem" id="u2140-4"><!-- content --><div id="u2140-3"><p>Agenda Completa</p></div></div><div class="pointer_cursor AccordionPanelContent disn borderbox clearfix colelem" id="u2141"><!-- group --><a class="block" target="_blank" href="href://#"></a><a class="nonblock nontext museBGSize clearfix grpelem" id="u2142-3" href="assets/agenda-28jun2016.pdf" target="_blank"><!-- content --><p>&nbsp;</p></a></div></li>
-      <li class="AccordionPanel borderbox clearfix colelem" id="u2173"><!-- vertical box --><div class="AccordionPanelTab borderbox clearfix colelem" id="u2176-4"><!-- content --><div id="u2176-3"><p>Folleto Informativo</p></div></div><div class="pointer_cursor AccordionPanelContent borderbox clearfix colelem" id="u2174"><!-- group --><a class="block" href="href://#"></a><a class="nonblock nontext museBGSize clearfix grpelem" id="u2206-3" href="assets/folleto-convencion-28jun2016.pdf" target="_blank"><!-- content --><p>&nbsp;</p></a></div></li>
+      <li class="AccordionPanel borderbox clearfix colelem" id="u2143"><!-- vertical box --><div class="AccordionPanelTab borderbox clearfix colelem" id="u2144-4"><!-- content --><div id="u2144-3"><p>Agenda Rápida</p></div></div><div class="AccordionPanelContent disn borderbox clearfix colelem" id="u2145"><!-- group --><a class="nonblock nontext museBGSize clearfix grpelem" id="u2146-3" href="#" target="_blank"><!-- content --><p>&nbsp;</p></a></div></li>
+      <li class="AccordionPanel borderbox clearfix colelem" id="u2139"><!-- vertical box --><div class="AccordionPanelTab borderbox clearfix colelem" id="u2140-4"><!-- content --><div id="u2140-3"><p>Agenda Completa</p></div></div><div class="pointer_cursor AccordionPanelContent disn borderbox clearfix colelem" id="u2141"><!-- group --><a class="block" target="_blank" href="href://#"></a><a class="nonblock nontext museBGSize clearfix grpelem" id="u2142-3" href="#" target="_blank"><!-- content --><p>&nbsp;</p></a></div></li>
+      <li class="AccordionPanel borderbox clearfix colelem" id="u2173"><!-- vertical box --><div class="AccordionPanelTab borderbox clearfix colelem" id="u2176-4"><!-- content --><div id="u2176-3"><p>Folleto Informativo</p></div></div><div class="pointer_cursor AccordionPanelContent borderbox clearfix colelem" id="u2174"><!-- group --><a class="block" href="#"></a><a class="nonblock nontext museBGSize clearfix grpelem" id="u2206-3" href="#" target="_blank"><!-- content --><p>&nbsp;</p></a></div></li>
      </ul>
      <div class="grpelem" id="u12103"><!-- custom html -->
       <a class="twitter-timeline" href="https://twitter.com/LUISFELIPE_P" data-tweet-limit="2" data-chrome="nofooter transparent noheader noborders" data-link-color="#88CBC7"  data-theme="dark" >Tweets de LUISFELIPE_P</a> 
